<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <RelativeLayout
        android:id="@+id/container_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Incremental Search"
            android:id="@+id/incremental_textView"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/container_footer"
        android:layout_below="@+id/container_header"
        android:id="@+id/contenedor_main_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/incrementalSearchMethodLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/num_telefono1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/x_inicial_label"
                    android:id="@+id/x0_textView"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/x0_editText"
                    android:textIsSelectable="false"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/num_telefono2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="true"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/iteraciones_label"
                    android:id="@+id/iteraciones_textView" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/iteraciones_editText"
                    android:textIsSelectable="false" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/num_telefono3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="true"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/delta_label"
                    android:id="@+id/delta_textView" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/delta_editText"
                    android:textIsSelectable="false"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/num_telefono"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="true"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/function_label"
                    android:id="@+id/function_textView" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10"
                    android:id="@+id/function_editText"
                    android:textIsSelectable="false"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/num_telefono22"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="true"
                android:orientation="vertical" >
                <Button
                    android:layout_width="129dp"
                    android:layout_height="wrap_content"
                    android:text="Execute"
                    android:id="@+id/execute_button"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.07" />

                <EditText
                    android:layout_width="273dp"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/result_editText"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.26" />
            </LinearLayout>
        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:id="@+id/container_footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <android.inputmethodservice.KeyboardView
            android:id="@+id/keyboardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="gone"/>
    </LinearLayout>
</RelativeLayout>